--- a/changelog-en.html
+++ b/changelog-en.html
@@ -66,12 +66,12 @@
 </head>
 <div style="font-weight: bold; font-size: 15px; text-align: center; width: 100%;">
     <strong>
-        <h1 style="color: #008069">PWA MINI V2</h1>
+        <h1 style="color: #008069">TKWhatsApp V14</h1>
     </strong>
 </div>
 
 <body>
-     <h2 style="color: #008069">Versão 2.0</h2>
+     <h2 style="color: #008069">Versão 14.0</h2>
     <date>14/01/2022</date>
 
     <p>
