--- a/changelog-es.html
+++ b/changelog-es.html
@@ -66,13 +66,13 @@
 </head>
 <div style="font-weight: bold; font-size: 15px; text-align: center; width: 100%;">
     <strong>
-        <h1 style="color: #008069">PWA MINI V2</h1>
+        <h1 style="color: #008069">TKWhatsApp V13</h1>
     </strong>
 </div>
 
 <body>
-     <h2 style="color: #008069">Versão 2.0</h2>
-    <date>14/01/2022</date>
+     <h2 style="color: #008069">Versão 13.0</h2>
+    <date>07/05/2022</date>
 
     <p>
         <fixed>FIXO</fixed> Errores corregidos </br>
